ingress/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host:  a0e2909823072496881479050627b402-1095667759.eu-central-1.elb.amazonaws.com 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: example-backend
                port:
                  number: 3000
